Fixes settings row title alignment
Settings row that use CSS class `settings_row-title-wrapper` would
display incorrectly the title if no subtitle is provided.

Change the CSS class `justify-content` to `center` to fix this issue.

--- a/src/pages/SettingsPage/Widgets.css
+++ b/src/pages/SettingsPage/Widgets.css
@@ -40,7 +40,7 @@
 .settings_row-title-wrapper {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   height: 32px;
 }
 
